# configure-nb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yaml
configure_nb/: cli.py  federation_nodes_model.py  logger.py  models.py  utility.py
data/: valid_config.ini
tests/: conftest.py  helpers.py  test_configure_nb.py  test_env_vars_config.py  test_federation_node_config.py  test_utility.py
tests/data/: 1_valid_node.env  1_valid_node_config.ini  valid_config.ini
